fix top margin on mobile

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -107,7 +107,7 @@ p {
   .floaty-unfloat-at--xs.floating-signup__wrap {
     position: static;
     display: block;
-    margin-top: 100px;
+    margin-top: 30px;
     top: auto;
     right: auto;
     bottom: auto;
